# cli

./: README.md  setup.py
cli/: MANIFEST.in  ruff.toml  setup.cfg  setup.py
cli/polyaxon/: __main__.py  _dist.py  api.py  cli.py  client.py  dist.py  docker.py  exceptions.py  fs.py  k8s.py  lifecycle.py  live_state.py  logger.py  main.py  pkg.py  polyaxonfile.py  schemas.py  settings.py  types.py
cli/polyaxon/_auxiliaries/: __init__.py  cleaner.py  default_scheduling.py  init.py  notifier.py  sidecar.py  tmux.py  tuner.py
cli/polyaxon/_cli/: admin.py  artifacts.py  auth.py  check.py  completion.py  components.py  config.py  dashboard.py  errors.py  init.py  models.py  operations.py  options.py  port_forward.py  project_versions.py  projects.py  run.py  sandbox.py  session.py  utils.py  version.py
cli/polyaxon/_client/: client.py  impersonate.py  init.py  mixin.py  organization.py  project.py  run.py  sandbox.py  store.py
cli/polyaxon/_config/: manager.py  parser.py  reader.py  spec.py
cli/polyaxon/_connections/: __init__.py  kinds.py  schemas.py
cli/polyaxon/_constants/: metadata.py
cli/polyaxon/_containers/: names.py
cli/polyaxon/_contexts/: keys.py  params.py  paths.py  refs.py  sections.py
cli/polyaxon/_deploy/: reader.py
cli/polyaxon/_docker/: agent.py  docker_types.py  executor.py
cli/polyaxon/_env_vars/: keys.py
cli/polyaxon/_flow/: __init__.py  operators.py  (+1 more)
cli/polyaxon_sdk/: __init__.py
cli/requirements/: dev.txt  fs.txt  init.txt  k8s_async.txt  master.txt  prod.txt  requirements.txt  sidecar.txt  test.txt
cli/tests/: conftest.py
(+1687 files in other folders)
