[metadata]
description = file: README.md

[tool:pytest]
addopts = --doctest-glob='*.rst'
markers =
    api_mark
    automl_mark
    docker_mark
    cli_mark
    client_mark
    utils_mark
    managers_mark
    operators_mark
    polyaxonfile_mark
    polyflow_mark
    components_mark
    connections_mark
    workflow_mark
    container_mark
    environment_mark
    init_mark
    mounts_mark
    ops_mark
    sidecars_mark
    termination_mark
    schemas_mark
    sidecar_mark
    tracking_mark
    parser_mark
    k8s_mark
    converter_mark
    compiler_mark
    agent_mark
    polyboard_mark
    plugins_mark
    hooks_mark
    builds_mark
    events_mark
    fixtures_mark

[mypy]
python_version = 3.9
namespace_packages = true
ignore_missing_imports = True
show_error_codes = True
allow_redefinition = True
exclude = (setup.py$)|(tests/)|(vendor/)
